<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tianshan.com.nanoparticalcalculator.ConcentrationCalculateActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/con_input"
        android:id="@+id/con_inputText"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/con_note"
        android:id="@+id/con_noteText"
        android:layout_below="@+id/con_inputText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="15dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/con_noteText"
        android:id="@+id/con_editText1"
        android:inputType="number"
        android:textSize="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/opticalDensity"
        android:id="@+id/opticalDensity"
        android:layout_below="@+id/con_editText1"
        android:textStyle="bold"
        android:textSize="18dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/opticalDensity"
        android:id="@+id/con_editText2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculate"
        android:id="@+id/calculate"
        android:layout_below="@+id/con_editText2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:onClick="onCalculateCon"
        android:background="#FFD700"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/con_output"
        android:id="@+id/con_output"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_below="@+id/calculate"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/con_result"
        android:textStyle="bold"
        android:textSize="25dp"
        android:visibility="visible"
        android:layout_below="@+id/con_output"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/mass_cal"
        android:id="@+id/mass_cal"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_below="@+id/con_result"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/mass_result"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_below="@+id/mass_cal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/goldCon_cal"
        android:id="@+id/goldCon_cal"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_below="@+id/mass_result"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:id="@+id/goldCon_result"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_below="@+id/goldCon_cal"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calAgain"
        android:id="@+id/calAgain"
        android:layout_below="@+id/goldCon_result"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:visibility="invisible"
        android:onClick="onCalAgain"
        android:background="#FFD700"/>


</RelativeLayout>
