<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="tianshan.com.nanoparticalcalculator.LinkActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/personalWeb"
        android:id="@+id/personalWeb"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="69dp"
        android:onClick="onPersonalWeb"
        android:background="#FFD700"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/paper"
        android:id="@+id/paper"
        android:layout_below="@+id/personalWeb"
        android:layout_marginTop="89dp"
        android:onClick="onPaper"
        android:background="#FFD700"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/link"
        android:id="@+id/supportingInfo"
        android:layout_below="@+id/paper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:onClick="onSupportingInfo"
        android:background="#FFD700"/>
</RelativeLayout>
